--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2076,7 +2076,7 @@ section,
     
     .hero {
       background-image: linear-gradient(rgba(0, 0, 0, 0.596), rgba(0, 0, 0, 0.356)),
-                        url(/assets/img/fotospro/Foto\ 19.jpg);
+                        url(../img/fotospro/Foto\ 19.jpg);
       background-size: cover;
       background-position: center;
     }
@@ -2107,7 +2107,7 @@ section,
   
   /* Header con efecto parallax */
   .about-header {
-    background: linear-gradient(rgba(0, 0, 0, 0.603), rgba(0, 0, 0, 0.404)), url('../assets/img/fotospro/Foto\ 6.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.603), rgba(0, 0, 0, 0.404)), url('../img/fotospro/Foto\ 6.jpg');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -2118,7 +2118,7 @@ section,
   }
   /* Header con efecto parallax */
   .diseño-header {
-    background: linear-gradient(rgba(0, 0, 0, 0.603), rgba(0, 0, 0, 0.404)), url('../assets/img/fotospro/Foto\ 19.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.603), rgba(0, 0, 0, 0.404)), url('../img/fotospro/Foto\ 19.jpg');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
