--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2847,7 +2847,7 @@ section,
 
 .call-to-action {
   background: linear-gradient(rgba(30, 60, 114, 0.85), rgba(105, 7, 7, 0.603)),
-  url('./assets/img/FOTOS/agro.jpeg');
+  url('../img/FOTOS/agro.jpeg');
   background-size: cover;
   background-position: center;
   padding: 80px 0;
