--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -84,7 +84,7 @@
 }
 
 .page-title {
-    background: linear-gradient(rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.123)), url('../img/fotospro/Foto\ 10.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.123)), url('../img/FOTOS/SACOS.jpeg');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
