--- a/assets/css/big-bags.css
+++ b/assets/css/big-bags.css
@@ -971,7 +971,7 @@ h3 {
 
 
 .page-title {
-    background: linear-gradient(rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.123)), url('../img/FOTOS/Foto\ 19.jpeg');
+    background: linear-gradient(rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.123)), url('../img/FOTOS/bolsones2.png');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
